--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,10 @@ dependencies:
 
   get: ^4.6.5
 
+  dio: ^4.0.6
+
+  json_annotation: ^4.7.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -63,7 +67,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-  - images/
+    - images/
+    - assets/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
